--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -4,107 +4,207 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="vertical"
         tools:ignore="MissingConstraints">
-
-        <TextView
+        <com.google.android.gms.ads.AdView
+            xmlns:ads="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            android:text="아이템의 잠재능력을 재설정합니다."
-            android:textSize="20sp"
-            tools:ignore="MissingConstraints" />
-        <ImageView
-            android:layout_width="300px"
-            android:layout_height="300px"
-            android:layout_margin="100px"
-            android:src="@drawable/mongbel"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="R 잠재옵션"
-            android:textSize="20sp"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="공격력 : 6%\n공격력 : 6%\n공격력 : 6%"
-            android:textSize="20sp"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="R 에디셔널 잠재옵션"
-            android:textSize="20sp"
-            android:layout_marginTop="40px"
-            tools:ignore="MissingConstraints" />
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="공격력 : 6%\n공격력 : 6%\n공격 시 20% 확률로 2레벨 슬로우..."
-            android:textSize="20sp"
-            tools:ignore="MissingConstraints" />
-
-        <HorizontalScrollView
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            ads:adSize="BANNER"
+            ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
+            tools:ignore="MissingConstraints">
+        </com.google.android.gms.ads.AdView>
+    </LinearLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="50dp">
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:scrollbars="none"
-            android:layout_margin="10dp">
-            <LinearLayout
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"
+            tools:ignore="MissingConstraints">
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="아이템을 강화합니다."
+                android:textSize="20sp"/>
+            <ImageView
+                android:id="@+id/equipment_image"
+                android:layout_width="70dp"
+                android:layout_height="70dp"
+                android:layout_margin="0dp"
+                android:src="@drawable/mongbel" />
+            <TextView
+                android:id="@+id/equipment_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:text="장비를 추가해주세요."/>
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="330dp"
+                    android:layout_marginHorizontal="20dp"
+                    android:padding="10dp"
+                    android:background="#9C000000">
+                    <TextView
+                        android:id="@+id/info"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="잠재능력을 재설정 해주세요."
+                        android:textSize="20sp"
+                        android:textColor="#F1F1F1"/>
+
+                </HorizontalScrollView>
+                <ImageView
+                    android:id="@+id/resultEffect"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"/>
+            </FrameLayout>
+
+            <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:orientation="horizontal">
-                <ImageButton
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:padding="20dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/cube_black"/>
-                <ImageButton
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:padding="20dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/cube_red"/>
-                <ImageButton
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:padding="20dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/cube_myungjang"/>
-                <ImageButton
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:padding="20dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/cube_jangin"/>
-                <ImageButton
-                    android:layout_width="90dp"
-                    android:layout_height="90dp"
-                    android:padding="20dp"
-                    android:scaleType="fitCenter"
-                    android:src="@drawable/cube_susang"/>
+                android:scrollbars="none"
+                android:layout_margin="10dp">
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/cube_button_0"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/cube_black"/>
+                        <ImageView
+                            android:id="@+id/cube_check_0"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/cube_button_1"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/cube_red"/>
+                        <ImageView
+                            android:id="@+id/cube_check_1"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/cube_button_2"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/cube_adi"/>
+                        <ImageView
+                            android:id="@+id/cube_check_2"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/cube_button_3"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/cube_myungjang"/>
+                        <ImageView
+                            android:id="@+id/cube_check_3"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/cube_button_4"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="20dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:src="@drawable/cube_jangin"/>
+                        <ImageView
+                            android:id="@+id/cube_check_4"
+                            android:layout_width="90dp"
+                            android:layout_height="90dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
 
-            </LinearLayout>
-        </HorizontalScrollView>
+                </LinearLayout>
+            </HorizontalScrollView>
 
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text="강화하기"
-            android:onClick="useCube"/>
-        <Button
-            android:layout_width="200dp"
-            android:layout_height="60dp"
-            android:text="뒤로가기"
-            android:onClick="goBack"/>
-    </LinearLayout>
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:onClick="useCube"
+                android:text="강화하기"/>
+            <Button
+                android:layout_width="200dp"
+                android:layout_height="60dp"
+                android:text="뒤로가기"
+                android:onClick="goBack"/>
+        </LinearLayout>
+        <TextView
+            android:id="@+id/sparkle_effect"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#F1EFE2"
+            android:visibility="invisible"/>
+    </FrameLayout>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
