--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -199,7 +199,8 @@
         <ImageView
             android:id="@+id/resultEffect"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:scaleType="fitCenter"/>
     </FrameLayout>
 
