--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,16 +7,14 @@
     tools:context=".MainActivity">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:gravity="bottom|center"
         tools:ignore="MissingConstraints">
         <com.google.android.gms.ads.AdView
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
             ads:adSize="BANNER"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
             tools:ignore="MissingConstraints">
@@ -24,15 +22,19 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:layout_marginTop="30dp"
         android:orientation="vertical"
         tools:ignore="MissingConstraints">
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="170dp"
+            android:src="@drawable/ui_title"/>
         <FrameLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="100dp">
+            android:layout_marginTop="30dp"
+            android:layout_gravity="center">
             <TextView
                 android:layout_width="90dp"
                 android:layout_height="90dp"
@@ -52,11 +54,13 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_marginBottom="30dp"
+            android:layout_gravity="center"
             android:text="장비를 추가해주세요."/>
         <Button
             android:id="@+id/button0"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@drawable/ui_button_basic"
             android:text="장비추가"
             android:layout_margin="5dp"
@@ -65,6 +69,7 @@
         <Button
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@drawable/ui_button_basic"
             android:text="주문서"
             android:layout_margin="5dp"
@@ -74,6 +79,7 @@
             android:id="@+id/button2"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@drawable/ui_button_basic"
             android:text="추가옵션"
             android:layout_margin="5dp"
@@ -83,6 +89,7 @@
             android:id="@+id/button3"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@drawable/ui_button_basic"
             android:layout_margin="5dp"
             android:text="잠재옵션"
@@ -92,6 +99,7 @@
             android:id="@+id/button4"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:background="@drawable/ui_button_basic"
             android:layout_margin="5dp"
             android:text="스타포스"
