--- a/app/src/main/res/drawable/ui_empty_item.xml
+++ b/app/src/main/res/drawable/ui_empty_item.xml
@@ -4,7 +4,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 <item
     android:state_pressed="true">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <shape>
         <solid android:color="#CC759797"/>
         <stroke
             android:width="1dp"
@@ -20,7 +20,7 @@
 <item
     android:state_window_focused="false"
     android:state_enabled="true">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <shape>
         <solid android:color="#CCD0DDDD"/>
         <stroke
             android:width="1dp"
@@ -35,7 +35,7 @@
 
 <item
     android:state_enabled="true">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <shape>
         <solid android:color="#CCD0DDDD"/>
         <stroke
             android:width="1dp"
@@ -50,7 +50,7 @@
 
 <item
     android:state_enabled="false">
-    <shape xmlns:android="http://schemas.android.com/apk/res/android">
+    <shape>
         <solid android:color="#CCD0DDDD"/>
         <stroke
             android:width="1dp"
