--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,7 +57,6 @@
             android:layout_gravity="center"
             android:text="장비를 추가해주세요."/>
         <Button
-            android:id="@+id/button0"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -76,17 +75,6 @@
             android:onClick="goScroll"
             tools:ignore="MissingConstraints" />
         <Button
-            android:id="@+id/button2"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@drawable/ui_button_basic"
-            android:text="추가옵션"
-            android:layout_margin="5dp"
-            android:onClick="goFlame"
-            tools:ignore="MissingConstraints" />
-        <Button
-            android:id="@+id/button3"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -96,7 +84,6 @@
             android:onClick="goPotential"
             tools:ignore="MissingConstraints" />
         <Button
-            android:id="@+id/button4"
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -104,9 +91,13 @@
             android:layout_margin="5dp"
             android:text="스타포스"
             tools:ignore="MissingConstraints" />
-
+        <Button
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/ui_button_basic"
+            android:layout_margin="5dp"
+            android:text="인벤토리"
+            tools:ignore="MissingConstraints" />
     </LinearLayout>
-
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
