--- a/app/src/main/res/layout/activity_scroll.xml
+++ b/app/src/main/res/layout/activity_scroll.xml
@@ -5,16 +5,14 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:gravity="bottom|center"
         tools:ignore="MissingConstraints">
         <com.google.android.gms.ads.AdView
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
             ads:adSize="BANNER"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
             tools:ignore="MissingConstraints">
@@ -61,11 +59,17 @@
                         android:id="@+id/info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="STR : +69(0 +69)"
+                        android:text="선택된 장비가 없습니다."
                         android:textSize="20sp"
                         android:textColor="#F1F1F1"/>
-                </ScrollView>
 
+                </ScrollView>
+                <TextView
+                    android:id="@+id/sparkle_effect"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:background="#F1EFE2"
+                    android:visibility="invisible"/>
             </FrameLayout>
 
             <HorizontalScrollView
@@ -180,6 +184,50 @@
                             android:src="@drawable/scroll_chaos"/>
                         <ImageView
                             android:id="@+id/scroll_check_4"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/scroll_button_5"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
+                            android:src="@drawable/flame_eternal"/>
+                        <ImageView
+                            android:id="@+id/scroll_check_5"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/scroll_button_6"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
+                            android:src="@drawable/flame_powerful"/>
+                        <ImageView
+                            android:id="@+id/scroll_check_6"
                             android:layout_width="75dp"
                             android:layout_height="75dp"
                             android:padding="10dp"
