--- a/app/src/main/res/layout/activity_potential.xml
+++ b/app/src/main/res/layout/activity_potential.xml
@@ -6,16 +6,14 @@
     android:layout_height="match_parent">
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
+        android:layout_height="match_parent"
+        android:gravity="bottom|center"
         tools:ignore="MissingConstraints">
         <com.google.android.gms.ads.AdView
             xmlns:ads="http://schemas.android.com/apk/res-auto"
             android:id="@+id/adView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentBottom="true"
             ads:adSize="BANNER"
             ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
             tools:ignore="MissingConstraints">
@@ -24,10 +22,11 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="50dp">
+        android:layout_marginBottom="50dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
             android:gravity="center"
             android:orientation="vertical"
             tools:ignore="MissingConstraints">
@@ -41,18 +40,20 @@
                 android:id="@+id/equipment_image"
                 android:layout_width="70dp"
                 android:layout_height="70dp"
-                android:layout_margin="0dp"
+                android:padding="10dp"
+                android:background="@drawable/ui_empty_item"
+                android:scaleType="fitCenter"
                 android:src="@drawable/mongbel" />
             <TextView
                 android:id="@+id/equipment_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="10dp"
+                android:layout_margin="10dp"
                 android:text="장비를 추가해주세요."/>
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <HorizontalScrollView
+                <ScrollView
                     android:layout_width="match_parent"
                     android:layout_height="330dp"
                     android:layout_marginHorizontal="20dp"
@@ -62,23 +63,24 @@
                         android:id="@+id/info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="잠재능력을 재설정 해주세요."
+                        android:text="선택된 장비가 없습니다."
                         android:textSize="20sp"
                         android:textColor="#F1F1F1"/>
 
-                </HorizontalScrollView>
-                <ImageView
-                    android:id="@+id/resultEffect"
+                </ScrollView>
+                <TextView
+                    android:id="@+id/sparkle_effect"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:scaleType="centerCrop"/>
+                    android:background="#F1EFE2"
+                    android:visibility="invisible"/>
             </FrameLayout>
 
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scrollbars="none"
-                android:layout_margin="10dp">
+                android:layout_margin="15dp">
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
@@ -87,18 +89,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <ImageButton
-                            android:id="@+id/cube_button_0"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:id="@+id/button0"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/cube_black"/>
                         <ImageView
-                            android:id="@+id/cube_check_0"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:id="@+id/check0"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -107,18 +111,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <ImageButton
-                            android:id="@+id/cube_button_1"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:id="@+id/button1"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/cube_red"/>
                         <ImageView
-                            android:id="@+id/cube_check_1"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:id="@+id/check1"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -127,18 +133,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <ImageButton
-                            android:id="@+id/cube_button_2"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:id="@+id/button2"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/cube_adi"/>
                         <ImageView
-                            android:id="@+id/cube_check_2"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:id="@+id/check2"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -147,18 +155,20 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <ImageButton
-                            android:id="@+id/cube_button_3"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:id="@+id/button3"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/cube_myungjang"/>
                         <ImageView
-                            android:id="@+id/cube_check_3"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:id="@+id/check3"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
@@ -167,39 +177,61 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
                         <ImageButton
-                            android:id="@+id/cube_button_4"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="20dp"
+                            android:id="@+id/button4"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
                             android:scaleType="fitCenter"
                             android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
                             android:src="@drawable/cube_jangin"/>
                         <ImageView
-                            android:id="@+id/cube_check_4"
-                            android:layout_width="90dp"
-                            android:layout_height="90dp"
-                            android:padding="15dp"
+                            android:id="@+id/check4"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
                             android:scaleType="fitCenter"
                             android:visibility="invisible"
                             android:src="@drawable/ui_checked"/>
                     </FrameLayout>
-
+                    <FrameLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+                        <ImageButton
+                            android:id="@+id/button5"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:layout_margin="2dp"
+                            android:padding="15dp"
+                            android:scaleType="fitCenter"
+                            android:onClick="select"
+                            android:background="@drawable/ui_empty_item"
+                            android:src="@drawable/cube_susang_adi"/>
+                        <ImageView
+                            android:id="@+id/check5"
+                            android:layout_width="75dp"
+                            android:layout_height="75dp"
+                            android:padding="10dp"
+                            android:scaleType="fitCenter"
+                            android:visibility="invisible"
+                            android:src="@drawable/ui_checked"/>
+                    </FrameLayout>
                 </LinearLayout>
             </HorizontalScrollView>
-
             <Button
                 android:layout_width="200dp"
-                android:layout_height="50dp"
+                android:layout_height="60dp"
                 android:background="@drawable/ui_button_basic"
                 android:onClick="useCube"
                 android:text="강화하기"/>
         </LinearLayout>
-        <TextView
-            android:id="@+id/sparkle_effect"
+        <ImageView
+            android:id="@+id/resultEffect"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="#F1EFE2"
-            android:visibility="invisible"/>
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:scaleType="fitCenter"/>
     </FrameLayout>
 
 
